--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -42,53 +42,53 @@ cc_library(
 cc_test(
     name = "eventuals",
     srcs = [
-        "bitwise_operator.cc",
-        "callback.cc",
-        "catch.cc",
-        "closure.cc",
-        "collect.cc",
-        "compose.cc",
-        "conditional.cc",
-        "control-loop.cc",
-        "dns-resolver.cc",
-        "do-all.cc",
-        "event-loop-test.h",
-        "eventual.cc",
+        # "bitwise_operator.cc",
+        # "callback.cc",
+        # "catch.cc",
+        # "closure.cc",
+        # "collect.cc",
+        # "compose.cc",
+        # "conditional.cc",
+        # "control-loop.cc",
+        # "dns-resolver.cc",
+        # "do-all.cc",
+        # "event-loop-test.h",
+        # "eventual.cc",
         "executor.cc",
-        "expected.cc",
-        "filesystem.cc",
-        "filter.cc",
-        "finally.cc",
-        "flat-map.cc",
-        "foreach.cc",
-        "fork-join.cc",
-        "generator.cc",
-        "http.cc",
-        "if.cc",
-        "iterate.cc",
-        "just.cc",
-        "let.cc",
-        "lock.cc",
-        "notification.cc",
-        "on-begin.cc",
-        "on-ended.cc",
-        "os.cc",
-        "pipe.cc",
-        "poll.cc",
-        "range.cc",
-        "repeat.cc",
-        "request-response-channel.cc",
-        "signal.cc",
-        "static-thread-pool.cc",
-        "stream.cc",
-        "take.cc",
-        "task.cc",
-        "then.cc",
-        "timer.cc",
-        "transformer.cc",
-        "type-check.cc",
-        "type-traits.cc",
-        "unpack.cc",
+        # "expected.cc",
+        # "filesystem.cc",
+        # "filter.cc",
+        # "finally.cc",
+        # "flat-map.cc",
+        # "foreach.cc",
+        # "fork-join.cc",
+        # "generator.cc",
+        # "http.cc",
+        # "if.cc",
+        # "iterate.cc",
+        # "just.cc",
+        # "let.cc",
+        # "lock.cc",
+        # "notification.cc",
+        # "on-begin.cc",
+        # "on-ended.cc",
+        # "os.cc",
+        # "pipe.cc",
+        # "poll.cc",
+        # "range.cc",
+        # "repeat.cc",
+        # "request-response-channel.cc",
+        # "signal.cc",
+        # "static-thread-pool.cc",
+        # "stream.cc",
+        # "take.cc",
+        # "task.cc",
+        # "then.cc",
+        # "timer.cc",
+        # "transformer.cc",
+        # "type-check.cc",
+        # "type-traits.cc",
+        # "unpack.cc",
     ],
     copts = copts(),
     # Use a faster implementation of malloc (and show that tests pass with it).
@@ -98,7 +98,7 @@ cc_test(
         ":http-mock-server",
         ":promisify-for-test",
         "//eventuals",
-        "//test/concurrent",
+        # "//test/concurrent",
         "@com_github_google_googletest//:gtest_main",
     ] + select({
         # We support backward lib only for macOS and Linux.
